--- a/index2.html
+++ b/index2.html
@@ -3,16 +3,16 @@
 
 <head>
 
-  <meta charset="UTF-8">
-  <title>Portfolio - Brooks Riekhof</title>
+    <meta charset="UTF-8">
+    <title>About - Brooks Riekhof</title>
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background: white">
         <a class="navbar-brand" href="index.html">Brooks Riekhof</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
             </ul>
         </div>
     </nav>
-    <div class="container">
+    <div class="container" style="background: white">
         <div class="row">
             <div class="col-sm-8">
                 <div class="page-header">
