--- a/index2.html
+++ b/index2.html
@@ -8,18 +8,18 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
+    <style> body {background-color: #f1eff1;} </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background: white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background: white; border: 1px solid #dddddd;">
         <a class="navbar-brand" href="index.html">Brooks Riekhof</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent" style="margin-left: 70%;">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">About</a>
@@ -33,16 +33,17 @@
             </ul>
         </div>
     </nav>
-    <div class="container" style="background: white">
+    <div></div>
+    <div class="container" style="background: white; border: 1px solid #dddddd; margin-top: 5%">
         <div class="row">
             <div class="col-sm-8">
                 <div class="page-header">
-                    <h1>About me</h1>
+                    <h1 style="color: teal; margin-bottom: 5%; border-bottom: 2px solid grey;">About me</h1>
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-sm-3">
                             <img src="https://placehold.it/200x200" class="image.me" alt="picture">
                         </div>
-                        <div class="col-sm-8">
+                        <div style="padding-left: 8%" class="col-sm-9">
                             <div class="text">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar quam odio, eu
                                     varius mauris dignissim
@@ -65,7 +66,9 @@
         </div>
     </div>
     </div>
-
+    <!-- Supposed Sticky Footer -->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom" style="color: teal; padding-top: 2%">
+    </nav>
 </body>
 
 </html>
